apps/unifi/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: unifi-ingress
  namespace: infra
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int

spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`unifi.sobrinho.pt`)
      kind: Rule
      services:
        - name: unifi
          port: 443
          scheme: https
          serversTransport: traefik-insecure-transport@kubernetescrd
